fix: claim injection time format